Fixing overflow issues

--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    overflow-x: hidden;
 }
 
 /* body */
